--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,16 +20,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    # Build the first project in shop-api directory
+    # Build the first project in shop-api directory, skipping tests
     - name: Build API with Maven
-      run: mvn -B package --file shop-api/pom.xml
+      run: mvn -B package -DskipTests --file shop-api/pom.xml
 
-    # Build the second project in shop-cms directory
+    # Build the second project in shop-cms directory, skipping tests
     - name: Build CMS with Maven
-      run: mvn -B package --file shop-cms/pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn -B package -DskipTests --file shop-cms/pom.xml
