implemented openapi spec with swagger

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 .DS_Store
 target/*
-shop-cms/target/*
-
-shop-cms/target/classes/co/decem/mongo/MongoApplication.class
-shop-cms/target/test-classes/co/decem/mongo/MongoApplicationTests.class
+shop-cms/target/**/*
+shop-api/target/**/*
