--- a/shop-api/src/main/resources/application.properties
+++ b/shop-api/src/main/resources/application.properties
@@ -21,3 +21,6 @@ elasticsearch.scheme=http
 elasticsearch.username=elastic
 elasticsearch.password=XH+Wn7ukSGKM+BfVfg3c
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
