--- a/shop-cms/src/main/resources/application.properties
+++ b/shop-cms/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=mongo
 server.port=9745
 spring.data.mongodb.uri=mongodb://localhost:27017/demoDB
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
