--- a/shop-api/src/main/resources/application.properties
+++ b/shop-api/src/main/resources/application.properties
@@ -24,3 +24,11 @@ elasticsearch.password=XH+Wn7ukSGKM+BfVfg3c
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
+sentry.enabled=true
+sentry.environment=production
+sentry.release=your-app@1.0.0
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+homepage.cache.key=homepage_data
+
